--- a/GrandeGift_Angular2/Index.html
+++ b/GrandeGift_Angular2/Index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css">
     <title>A2 template</title>
     <!-- 1. Load libraries -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
