--- a/GrandeGift_Angular2/app/app.component.template.html
+++ b/GrandeGift_Angular2/app/app.component.template.html
@@ -1,6 +1,3 @@
 ﻿<h1>{{title}}</h1>
-<nav>
-    <a routerLink="/">Dashboard</a>
-    <a routerLink="/personal">PersonalCabinet</a>
-</nav>
-<router-outlet></router-outlet>
+
+<my-hampers></my-hampers>
