fix CORS problem(Api service working)

--- a/GrandeGift_Angular2/app/hamper/hamper.component.template.html
+++ b/GrandeGift_Angular2/app/hamper/hamper.component.template.html
@@ -20,8 +20,6 @@
                 </div>
             </div>
         </div>
-        
-
         <!--<button class="btn btn-success" type="button" (click)="search()" style="width:100%;">Go</button>-->
     </div>
     
@@ -40,6 +38,8 @@
             <td>{{hamper.category.name}}</td>
         </tr>
     </table>
+
+    <button type="button" (click)="test()" class="btn btn-success">Test</button>
 </div>
 
 
