fixed list refresh

--- a/GrandeGift_Angular2/app/hamper/hamper.component.template.html
+++ b/GrandeGift_Angular2/app/hamper/hamper.component.template.html
@@ -31,7 +31,7 @@
             <th>Price</th>
             <th>Category</th>
         </tr>
-        <tr *ngFor="let hamper of hampers">
+        <tr *ngFor="let hamper of tempHampers">
             <td>{{hamper.hamperId}}</td>
             <td>{{hamper.name}}</td>
             <td>{{hamper.price | currency}}</td>
